fix clip rect overflow chrome bug, faster charts

--- a/css/awesomplete.css
+++ b/css/awesomplete.css
@@ -2,6 +2,7 @@
 
 .visually-hidden {
   clip: rect(0, 0, 0, 0);
+  left: 15px;
   position: absolute;
 }
 
